# omega-protocol

./: Cargo.toml  README.md
examples/: simple_node.rs
src/: lib.rs  node.rs  types.rs  utils.rs
src/operators/: doublekick.rs  masking.rs  mod.rs  pfadinvarianz.rs  resonance.rs  sweep.rs  weight_transfer.rs
tests/: integration_test.rs
