[package]
name = "omega-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Klemm"]
description = "OMEGA Protocol - Operator-driven Meta-architecture for Encrypted Ghost-like Autonomous Networks"
license = "MIT"

[dependencies]
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
rustfft = "6.1"
num-complex = "0.4"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[lib]
name = "omega_protocol"
path = "src/lib.rs"

[[example]]
name = "simple_node"
path = "examples/simple_node.rs"
